--- a/res/layout/program_list.xml
+++ b/res/layout/program_list.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-	android:id="@+id/LinearLayoutPL" 
+<LinearLayout android:id="@+id/LinearLayoutSL"
+	android:orientation="vertical" 
 	android:layout_width="fill_parent" 
 	android:layout_height="fill_parent" 
-	android:orientation="vertical" 
 	xmlns:android="http://schemas.android.com/apk/res/android">
-	<TextView android:text="@string/select_program" android:id="@+id/text_select_program" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-<ListView android:id="@+id/program_list" android:layout_width="wrap_content" android:layout_height="wrap_content"></ListView>
+<ListView android:id="@+id/android:list" android:layout_width="wrap_content" android:layout_height="wrap_content"></ListView>
+  	<TextView android:id="@+id/android:empty"
+          android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:text="No Programs!"/>
 </LinearLayout>
