--- a/res/layout/program_list_row.xml
+++ b/res/layout/program_list_row.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-	android:id="@+id/LinearLayoutPL_row" 
-	android:layout_width="fill_parent" 
-	android:layout_height="fill_parent" 
-	android:orientation="vertical" 
-	xmlns:android="http://schemas.android.com/apk/res/android">
-<TextView android:text="" android:id="@+id/program_name" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-</LinearLayout>
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/program_name"
+    android:layout_width="fill_parent"
+    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:gravity="center_vertical"
+    android:paddingLeft="5dip"
+    android:singleLine="true"
+/>
