--- a/res/layout/synchronization.xml
+++ b/res/layout/synchronization.xml
@@ -3,5 +3,5 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content">
-<TextView android:text="Please wait" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+<TextView android:text="Please wait" android:id="@+id/TextMessage" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 </LinearLayout>
