--- a/res/layout/session_reps_list_row.xml
+++ b/res/layout/session_reps_list_row.xml
@@ -6,41 +6,28 @@
 	android:orientation="vertical" 
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	
-		<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="1"
-    >
-		<TextView android:text="@string/weight" android:id="@+id/planned_weight_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-		<TextView android:text="" android:id="@+id/planned_weight_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-	</LinearLayout>
-	<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="1"
-    >
-		<TextView android:text="@string/reps" android:id="@+id/planned_reps_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-		<TextView android:text="" android:id="@+id/planned_reps_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-	</LinearLayout>
 	
-	<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="1"
-    >
-		<TextView android:text="@string/weight" android:id="@+id/weight_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-		<TextView android:text="" android:id="@+id/weight_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-	</LinearLayout>
-	<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="1"
-    >
-		<TextView android:text="@string/reps" android:id="@+id/reps_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-		<TextView android:text="" android:id="@+id/reps_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-	</LinearLayout>
+	<TableLayout android:id="@+id/reps_table" android:layout_width="wrap_content" android:layout_height="wrap_content">
+         <TableRow android:background="#00ff00" android:layout_margin="2dip">
+              <TextView android:text="pl. reps"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="x"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="pl. weight"  android:background="#0000ff" android:layout_margin="2dip" />
+              
+              <TextView android:text="reps"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="x"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="weight"  android:background="#0000ff" android:layout_margin="2dip" />
+    	</TableRow>
+    	
+    	<TableRow>
+			  <TextView android:text="" android:id="@+id/planned_reps_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+              <TextView android:text="x" />
+              <TextView android:text="" android:id="@+id/planned_weight_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+              
+              <TextView android:text="" android:id="@+id/reps_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+              <TextView android:text="x" />
+              <TextView android:text="" android:id="@+id/weight_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+              
+    	</TableRow>
+</TableLayout>
+	
 </LinearLayout>
