--- a/res/layout/setview_list_row.xml
+++ b/res/layout/setview_list_row.xml
@@ -18,8 +18,8 @@
 		<TableLayout android:id="@+id/reps_table" android:layout_width="wrap_content" android:layout_height="wrap_content">
 	         <TableRow android:background="#00ff00" android:layout_margin="2dip">
 	              <TextView android:text="reps"  android:background="#0000ff" android:layout_margin="2dip" />
-	              <TextView android:text="x"  android:background="#0000ff" android:layout_margin="2dip" />
-	              <TextView android:text="percentage"  android:background="#0000ff" android:layout_margin="2dip" />
+	              <TextView android:text="x" android:id="@+id/x_col" android:background="#0000ff" android:layout_margin="2dip" />
+	              <TextView android:text="percentage" android:id="@+id/percentage_col" android:background="#0000ff" android:layout_margin="2dip" />
 	    	</TableRow>
 		</TableLayout>
 		
