--- a/res/layout/edit_reps_entry.xml
+++ b/res/layout/edit_reps_entry.xml
@@ -6,7 +6,6 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
 <TextView android:text="@string/reps" android:id="@+id/text_times" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 <EditText android:text="" android:id="@+id/editText_reps" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
-<TextView android:text="@string/percentage" android:id="@+id/text_weight" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+<TextView android:text="@string/percentage" android:id="@+id/text_percentage" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 <EditText android:text="" android:id="@+id/editText_percentage" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
-<Button android:text="@string/done" android:id="@+id/button_save" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
 </LinearLayout>
