--- a/res/layout/sessionview_list_row.xml
+++ b/res/layout/sessionview_list_row.xml
@@ -18,12 +18,12 @@
 <TableLayout android:id="@+id/reps_table" android:layout_width="wrap_content" android:layout_height="wrap_content">
          <TableRow android:background="#00ff00" android:layout_margin="2dip">
               <TextView android:text="pl. reps"  android:background="#0000ff" android:layout_margin="2dip" />
-              <TextView android:text="x"  android:background="#0000ff" android:layout_margin="2dip" />
-              <TextView android:text="pl. weight"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="x" android:id="@+id/x_col" android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="pl. weight" android:id="@+id/planned_weight_col" android:background="#0000ff" android:layout_margin="2dip" />
               
               <TextView android:text="reps"  android:background="#0000ff" android:layout_margin="2dip" />
-              <TextView android:text="x"  android:background="#0000ff" android:layout_margin="2dip" />
-              <TextView android:text="weight"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="x" android:id="@+id/x_done_col" android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="weight" android:id="@+id/weight_col" android:background="#0000ff" android:layout_margin="2dip" />
     	</TableRow>
 </TableLayout>
 
