--- a/res/layout/program_view.xml
+++ b/res/layout/program_view.xml
@@ -4,13 +4,18 @@
 	android:id="@+id/program_table"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:stretchColumns="1" 
+    android:stretchColumns="0,1,2,3,4,5,6" 
     android:background="#000000">
 
          
          <TableRow android:background="#00ff00" android:layout_margin="2dip">
-              <TextView android:text="col1"  android:background="#0000ff" android:layout_margin="2dip" />
-              <TextView android:text="col2"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="@string/mon"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="@string/tue"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="@string/wed"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="@string/thu"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="@string/fri"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="@string/sat"  android:background="#0000ff" android:layout_margin="2dip" />
+              <TextView android:text="@string/sun"  android:background="#0000ff" android:layout_margin="2dip" />
     	</TableRow>
 
 </TableLayout>
