--- a/res/layout/edit_program.xml
+++ b/res/layout/edit_program.xml
@@ -7,6 +7,6 @@
 <TextView android:text="@string/name" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 <EditText android:text="" android:id="@+id/edit_name" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
 <TextView android:text="@string/description" android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-<EditText android:text="" android:id="@+id/edit_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1"></EditText>
+<EditText android:text="" android:id="@+id/edit_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="top" android:layout_weight="1"></EditText>
 <Button android:text="@string/save" android:id="@+id/button_save" android:layout_width="wrap_content" android:layout_height="wrap_content" ></Button>
 </LinearLayout>
