--- a/res/layout/edit_reps_entry.xml
+++ b/res/layout/edit_reps_entry.xml
@@ -7,5 +7,5 @@
 <TextView android:text="@string/reps" android:id="@+id/text_times" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 <EditText android:text="" android:id="@+id/editText_reps" android:inputType="number" android:layout_width="@dimen/numeric_width" android:layout_height="wrap_content"></EditText>
 <TextView android:text="@string/percentage" android:id="@+id/text_percentage" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-<EditText android:text="" android:id="@+id/editText_percentage" android:inputType="number" android:layout_width="@dimen/numeric_width" android:layout_height="wrap_content"></EditText>
+<EditText android:text="" android:id="@+id/editText_percentage" android:inputType="numberDecimal" android:layout_width="@dimen/numeric_width" android:layout_height="wrap_content"></EditText>
 </LinearLayout>
