--- a/res/layout/synchronization.xml
+++ b/res/layout/synchronization.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content">
-<TextView android:text="Please wait" android:id="@+id/TextMessage" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent" android:layout_height="wrap_content"
+	android:orientation="vertical">
+
+	<TextView android:text="@string/sync_message" android:id="@+id/TextMessage"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:gravity="center_vertical|center_horizontal"
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:padding="10dip"></TextView>
+	<Button android:text="@string/start_synchronization" android:id="@+id/btnStart"
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
+		
+		<TextView android:text="" android:id="@+id/TextResult"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:gravity="center_vertical|center_horizontal"
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:padding="10dip"></TextView>		
 </LinearLayout>
