--- a/res/layout/program_view.xml
+++ b/res/layout/program_view.xml
@@ -1,33 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/program_table" android:layout_width="fill_parent"
-	android:layout_height="fill_parent" 
-	android:background="#000000">
-
-
-	<TableRow android:background="#00ff00" android:layout_margin="2dip">
+<LinearLayout android:id="@+id/LinearLayout01"
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
+	
+	<LinearLayout android:id="@+id/LinearLayout02"
+		android:layout_width="fill_parent" android:layout_height="wrap_content">
+		
 		<TextView android:text="@string/mon" android:background="#0000ff"
-			android:layout_margin="2dip" android:textAppearance="?android:attr/textAppearanceMedium"
-			android:gravity="center" android:layout_weight="1.0"/>
+			android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="0dip" android:gravity="center"
+			android:layout_weight="1.0" />
 		<TextView android:text="@string/tue" android:background="#0000ff"
-			android:layout_margin="2dip" android:textAppearance="?android:attr/textAppearanceMedium"
-			android:gravity="center" android:layout_weight="1.0"/>
+		android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="0dip" android:gravity="center"
+			android:layout_weight="1.0" />
 		<TextView android:text="@string/wed" android:background="#0000ff"
-			android:layout_margin="2dip" android:textAppearance="?android:attr/textAppearanceMedium"
-			android:gravity="center" android:layout_weight="1.0"/>
+			android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="0dip" android:gravity="center"
+			android:layout_weight="1.0" />
 		<TextView android:text="@string/thu" android:background="#0000ff"
-			android:layout_margin="2dip" android:textAppearance="?android:attr/textAppearanceMedium"
-			android:gravity="center" android:layout_weight="1.0"/>
+			android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="0dip" android:gravity="center"
+			android:layout_weight="1.0" />
 		<TextView android:text="@string/fri" android:background="#0000ff"
-			android:layout_margin="2dip" android:textAppearance="?android:attr/textAppearanceMedium"
-			android:gravity="center" android:layout_weight="1.0"/>
+		android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="0dip" android:gravity="center"
+			android:layout_weight="1.0" />
 		<TextView android:text="@string/sat" android:background="#0000ff"
-			android:layout_margin="2dip" android:textAppearance="?android:attr/textAppearanceMedium"
-			android:gravity="center" android:layout_weight="1.0"/>
+		android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="0dip" android:gravity="center"
+			android:layout_weight="1.0" />
 		<TextView android:text="@string/sun" android:background="#0000ff"
-			android:layout_margin="2dip" android:textAppearance="?android:attr/textAppearanceMedium"
-			android:gravity="center" android:layout_weight="1.0"/>
-	</TableRow>
-
-</TableLayout>
+		android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="0dip" android:gravity="center"
+			android:layout_weight="1.0" />
+	</LinearLayout>
+	
+	<ScrollView android:id="@+id/ScrollView01"
+		android:layout_width="fill_parent" android:layout_height="fill_parent">
+		<TableLayout android:id="@+id/program_table"
+			android:layout_width="fill_parent" android:layout_height="fill_parent"
+			android:background="#000000">
+		</TableLayout>
+	</ScrollView>
+</LinearLayout>
