--- a/res/layout/setview_list.xml
+++ b/res/layout/setview_list.xml
@@ -8,5 +8,5 @@
   	<TextView android:id="@+id/android:empty"
           android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
-        	android:text="No exercises for this set!"/>
+        	android:text="No exercises for this workout!"/>
 </LinearLayout>
