--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -6,6 +6,7 @@
 		<item>Programs</item>
 		<item>Sessions</item>
 		<item>Measurements</item>
+		<item>Statistics</item>
 	</string-array>
 	<string-array name="exercising_tab_descs">
 		<item>List of exercises by groups</item>
@@ -13,6 +14,7 @@
 		<item>Workout programs</item>
 		<item>Workout sessions - data you enter during actual workout</item>
 		<item>Body weight, waist size, etc.</item>
+		<item>Exercising statistics</item>
 	</string-array>
 	<string-array name="fitmaestro_tab">
 		<item>Account</item>
@@ -32,4 +34,14 @@
 		<item>Login</item>
 		<item>Register</item>
 	</string-array>	
+	
+	<string-array name="stat_types">
+		<item>Meximum values</item>
+		<item>Session sums</item>
+	</string-array>
+	<string-array name="stat_types_desc">
+		<item>Maximum values for the session</item>
+		<item>Register</item>
+	</string-array>	
+	
 </resources>
