--- a/res/layout/edit_meas_value.xml
+++ b/res/layout/edit_meas_value.xml
@@ -4,6 +4,8 @@
 	android:layout_width="fill_parent" 
 	android:layout_height="fill_parent" 
 	xmlns:android="http://schemas.android.com/apk/res/android">
-<TextView android:text="@string/value" android:id="@+id/text_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-<EditText android:text="" android:id="@+id/editText_value" android:inputType="number" android:layout_width="@dimen/numeric_width" android:layout_height="wrap_content"></EditText>
+			<LinearLayout android:id="@+id/LinearLayout01" android:orientation="vertical"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center">
+				<TextView android:text="@string/value" android:id="@+id/text_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+				<EditText android:text="" android:id="@+id/editText_value" android:inputType="number" android:layout_width="@dimen/numeric_width" android:layout_height="wrap_content"></EditText>
+</LinearLayout>
 </LinearLayout>
