--- a/res/layout/edit_measurement_type.xml
+++ b/res/layout/edit_measurement_type.xml
@@ -10,11 +10,11 @@
 
 
 	<TextView android:text="@string/units" android:id="@+id/text_units" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>	
-	<EditText android:text="" android:id="@+id/edit_units" android:layout_width="fill_parent" android:layout_height="wrap_content" ></EditText>
+	<EditText android:text="" android:id="@+id/edit_units" android:layout_width="@dimen/numeric_width" android:layout_height="wrap_content" ></EditText>
 	
 	<TextView android:text="@string/description" android:id="@+id/text_description" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 	<EditText android:text="" android:id="@+id/edit_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="top" android:layout_weight="1"></EditText>
 	
 	
-	<Button android:text="@string/save" android:id="@+id/button_save" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
+	<Button android:text="@string/save" android:id="@+id/button_save" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
 </LinearLayout>
