--- a/res/layout/meas_log_list.xml
+++ b/res/layout/meas_log_list.xml
@@ -4,9 +4,11 @@
 	android:layout_width="fill_parent" 
 	android:layout_height="fill_parent" 
 	xmlns:android="http://schemas.android.com/apk/res/android">
-<ListView android:id="@+id/android:list" android:layout_width="fill_parent" android:layout_height="wrap_content"></ListView>
-  	<TextView android:id="@+id/android:empty"
+	  	<TextView android:id="@+id/android:empty"
           android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:text="No Entries For This Measurement!"/>
+        	
+<ListView android:id="@+id/android:list" android:layout_width="fill_parent" android:layout_height="fill_parent"></ListView>
+
 </LinearLayout>
