--- a/res/layout/meas_log_list_row.xml
+++ b/res/layout/meas_log_list_row.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout 
-	android:id="@+id/LinearLayoutELL_row" 
-	android:layout_width="fill_parent" 
-	android:layout_height="fill_parent" 
-	android:orientation="vertical" 
-	xmlns:android="http://schemas.android.com/apk/res/android">
-	<LinearLayout
+    android:id="@+id/LinearLayoutELL_row" 
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_weight="1"
+    android:paddingLeft="5dip"
+    android:layout_weight="1.0"
     >
-		<TextView android:text="@string/value" android:id="@+id/meas_value_caption" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-		<TextView android:text="" android:id="@+id/meas_value" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-		<TextView android:text="" android:id="@+id/units_name" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-	</LinearLayout>
-	
-	<LinearLayout
+    
+        <TextView android:text="45" android:id="@+id/meas_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
+        <TextView android:text=" " android:id="@+id/space" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
+        <TextView android:text="kg" android:id="@+id/units_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
+
+
+    </LinearLayout>
+    
+    <LinearLayout
     android:orientation="horizontal"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="fill_parent"
-    android:layout_weight="1"
+    android:paddingTop="10dip"
     >
-		<TextView android:text="@string/time_row" android:id="@+id/log_entry_time_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-		<TextView android:text="" android:id="@+id/entry_time" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-	</LinearLayout>
+    <TextView android:text="27 July" android:id="@+id/entry_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
+    </LinearLayout>
 </LinearLayout>
+
