--- a/res/layout/sessionview_list_row.xml
+++ b/res/layout/sessionview_list_row.xml
@@ -12,27 +12,27 @@
 		android:singleLine="true" />
 	<TableLayout android:id="@+id/reps_table"
 		android:layout_width="fill_parent" android:layout_height="wrap_content">
-		<TableRow android:background="#00ff00" android:layout_margin="2dip">
-			<TextView android:text="pl. reps" android:background="#0000ff"
-				android:layout_margin="2dip" android:layout_weight="1.0"
+		<TableRow android:id="@+id/reps_table_header">
+			<TextView android:text="@string/planned_reps_table" android:background="#0000ff"
+				android:layout_weight="1.0"
 				android:gravity="center" />
 			<TextView android:text="x" android:id="@+id/x_col"
-				android:background="#0000ff" android:layout_margin="2dip"
+				android:background="@color/tables_header"
 				android:gravity="center" android:paddingLeft="3dip"
 				android:paddingRight="3dip" />
-			<TextView android:text="pl. weight" android:id="@+id/planned_weight_col"
-				android:background="#0000ff" android:layout_margin="2dip"
+			<TextView android:text="@string/planned_weight_table" android:id="@+id/planned_weight_col"
+				android:background="@color/tables_header"
 				android:layout_weight="1.0" android:gravity="center" />
 
-			<TextView android:text="reps" android:background="#0000ff"
-				android:layout_margin="2dip" android:layout_weight="1.0"
+			<TextView android:text="@string/reps_table" android:background="#0000ff"
+				android:layout_weight="1.0"
 				android:gravity="center" />
 			<TextView android:text="x" android:id="@+id/x_done_col"
-				android:background="#0000ff" android:layout_margin="2dip"
+				android:background="@color/tables_header"
 				android:gravity="center" android:paddingLeft="3dip"
 				android:paddingRight="3dip" />
-			<TextView android:text="weight" android:id="@+id/weight_col"
-				android:background="#0000ff" android:layout_margin="2dip"
+			<TextView android:text="@string/weight_table" android:id="@+id/weight_col"
+				android:background="@color/tables_header"
 				android:layout_weight="1.0" android:gravity="center" />
 		</TableRow>
 	</TableLayout>
