--- a/res/layout/setview_list.xml
+++ b/res/layout/setview_list.xml
@@ -4,9 +4,11 @@
 	android:layout_width="fill_parent" 
 	android:layout_height="fill_parent" 
 	xmlns:android="http://schemas.android.com/apk/res/android">
-<ListView android:id="@+id/android:list" android:layout_width="fill_parent" android:layout_height="wrap_content"></ListView>
-  	<TextView android:id="@+id/android:empty"
+	
+	<TextView android:id="@+id/android:empty"
           android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:text="No exercises for this workout!"/>
+<ListView android:id="@+id/android:list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0"></ListView>
+
 </LinearLayout>
