Statistics selector screen now uses list for defining parameters, fixed crash with returning without selecting exercise, added chack if exercise already added to workout or session

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -35,4 +35,10 @@
 		<item>Register</item>
 	</string-array>	
 	
+	<string-array name="stats_params">
+		<item>Exercise:</item>
+		<item>Start date:</item>
+		<item>End date:</item>
+	</string-array>	
+	
 </resources>
