--- a/res/layout/measurement_list.xml
+++ b/res/layout/measurement_list.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
     
 	<ListView 
-	    android:id="@+id/program_list"
+	    android:id="@+id/measurement_list"
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"/>
     
